business rules delete , edit and create status dropdown update issue fixed, header border issue fixed, status column alignment issue fixed

--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -1419,3 +1419,6 @@
             color: #a6bdda;
         }
    
+        .kr-sg-input-text-area textarea.desc-text-area{
+            min-height: inherit !important;
+        }
